斐波拉切，栈

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(mydemo)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(mydemo main.cpp list/seq/SeqListDemo.cpp list/seq/SeqListDemo.h list/link/LinkListDemo.cpp list/link/LinkListDemo.h universal/Universal.cpp universal/Universal.h stack/SqStackDemo.cpp stack/SqStackDemo.h)
+add_executable(mydemo main.cpp list/seq/SeqListDemo.cpp list/seq/SeqListDemo.h list/link/LinkListDemo.cpp list/link/LinkListDemo.h universal/Universal.cpp universal/Universal.h stack/SqStackDemo.cpp stack/SqStackDemo.h stack/LinkStackDemo.cpp stack/LinkStackDemo.h)
